--- a/pet_management/frmMain.resx
+++ b/pet_management/frmMain.resx
@@ -223,47 +223,6 @@
         MnoiIGNsYXNzPSJZZWxsb3ciIC8+DQogIDwvZz4NCjwvc3ZnPgs=
 </value>
   </data>
-  <data name="btnStaff.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjEsIFZlcnNpb249MjAuMS4z
-        LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
-        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAPcHAAAC77u/
-        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgd2lkdGg9IjQ4cHgiIGhl
-        aWdodD0iNDhweCIgdmlld0JveD0iMCAwIDQ4IDQ4IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAw
-        MC9zdmciIGZpbGw9Im5vbmUiPg0KICA8cGF0aCBkPSJNMzguMzAyNCA0MC4wMjIxQzM2LjU0MzMgNDIu
-        NDg2MSAyNi44Mzg4IDQzLjAwMzEgMTkuMzY4NSA0My4wMDMxQzExLjg5ODIgNDMuMDAzMSAzLjA1Mjc0
-        IDQyLjQ4NjEgMS4yOTM1OCA0MC4wMjEyQzAuODIxMTYgMzkuMzYwMiAwLjcxNzU4MSAzOC41NTUxIDEu
-        MDA4MTEgMzcuODEyNEMyLjcyMjYzIDMzLjQ0NjEgNS42MjM2OSAzMi40MjM4IDcuOTU5NjkgMzIuMDIx
-        MkM5LjkwNzQ3IDMxLjY4NDQgMTEuODA3MyAzMC45ODEyIDEyLjY3MjEgMzAuNTI4MkMxMi43MDU4IDMw
-        LjEzMjQgMTQuOTM1NyAzMi40MjggMTQuOTM1NyAzMi40MjhMMTQuMDUzMiAzMy4zMDg4QzEyLjk1NTEg
-        MzMuNzY2MSAxMS41OTQyIDMzLjkyMTkgOS42NDA1MyAzNC4xOTA1QzcuOTg0OTUgMzQuNDE2MiA0Ljcw
-        NjYzIDM1LjE5OTMgMy40NjIgMzcuNzE1NkMzLjUyMzQ4IDM3Ljc3MjggNS44NDI2MyA0MC40NzY4IDE5
-        LjM2ODUgNDAuNDc2OEMzMi44OTQ0IDQwLjQ3NjggMzYuMDQ0NyAzNy43NzYyIDM2LjExNzIgMzcuNzE1
-        NkMzNC44NjA3IDM1LjIwMzYgMzEuNTkzNCAzNC40MTYyIDI5LjkzODYgMzQuMTkwNUMyNy45NjA1IDMz
-        LjkxNzcgMjYuNjEwNiAzMy43NjY5IDI1LjUyNiAzMy4zMDg4TDI0LjY0MzUgMzIuNDI4TDI2LjkxOCAz
-        MC41MjQ4QzI2LjkxOCAzMC41MjQ4IDI5LjY4NTIgMzEuNjgzNiAzMS42MzQ2IDMyLjAyMjFDMzMuOTcx
-        NSAzMi40MjU0IDM2Ljg3MjUgMzMuNDQ2OSAzOC41ODcxIDM3LjgxNDlDMzguODc2NyAzOC41NTYgMzgu
-        Nzc0IDM5LjM2MSAzOC4zMDI0IDQwLjAyMjFaTTE5LjgwODEgMzEuMTYxNEMxMy45MTkzIDMxLjE2MTQg
-        OS4xNDUzNyAyNC4wNDU3IDkuMTQ1MzcgMTguMTM0OUM5LjE0NTM3IDEwLjk0MDggMTIuNzExNyA1LjEw
-        ODQgMTkuODA4MSA1LjEwODRDMjYuOTA4NyA1LjEwODQgMzAuNDcwOCAxMC45NDA4IDMwLjQ3MDggMTgu
-        MTM0OUMzMC40NzA4IDI0LjAxNjIgMjUuNjk2OSAzMS4xNjE0IDE5LjgwODEgMzEuMTYxNFpNMTkuNzgx
-        MiA4LjYzMzQ1QzE0Ljc4ODMgOC42MzM0NSAxMi4yNzg4IDEyLjk3MzcgMTIuMjc4OCAxOC4zMjc4QzEy
-        LjI3ODggMjIuNzI2MSAxNC43NjMxIDI4LjAyMTIgMTkuMzQ4MyAyOC4wMjEyQzIzLjkzMzYgMjguMDIx
-        MiAyNy4yODM1IDIyLjcwNDIgMjcuMjgzNSAxOC4zMjc4QzI3LjI4MzUgMTIuOTczNyAyNC43Nzc0IDgu
-        NjMzNDUgMTkuNzgxMiA4LjYzMzQ1WiIgZmlsbD0iIzEwNDQ3MyIgY2xpcC1ydWxlPSJldmVub2RkIiBm
-        aWxsLXJ1bGU9ImV2ZW5vZGQiIC8+DQogIDxwYXRoIGQ9Ik00Ni4wMTM1IDM0LjIxMzNDNDMuMzU3NSAz
-        Ni41OTk5IDQwLjQyMTEgMzUuNDI0MyA0MC40MjExIDM1LjQyNDNDNDAuNDA2IDM1LjQyNTEgMzQuOTkw
-        NCAzMC44MzkgMjkuODYyOCAyOC43NDEzQzM1Ljg0MzQgMzAuMDgxMSAzOC43MzY5IDI3Ljg0NTMgMzgu
-        NzM2OSAyNy44NDUzQzM4LjczNjkgMjcuODQ1MyAzOS45NzA2IDI4LjAwNTMgNDIuMTA1MyAyOC42ODc1
-        QzQ0LjAwMDEgMjkuNjgzNyA0NS4wMTkgMjkuNjgyOCA0Ni4yMTE0IDMyLjY5MTdDNDYuNDEzNSAzMy4y
-        MDI4IDQ2LjM0MiAzMy43NTc4IDQ2LjAxMzUgMzQuMjEzM1pNMzMuNjg0MyAyNy4wMDMyQzMxLjIyMzYg
-        MjcuMDk0MiAzMC4zMTU4IDI2LjE2MTEgMzAuMzE1OCAyNi4xNjExQzMwLjMxNTggMjYuMTYxMSAzNS40
-        Nzg4IDIyLjM2ODMgMzEuMTU3OSAxMC4xNjExQzMxLjE1NzkgMTAuMTYxMSAzMS41MzUyIDEwLjE2MTEg
-        MzMuMTQ3OCAxMC4xNjExQzM4LjA4NzYgMTAuMTYxMSA0MC41NjYgMTQuMTc4OCA0MC41NjYgMTkuMTM0
-        NkM0MC41NjYgMjMuMTg2OCAzNy43Nzc3IDI2Ljg1MTcgMzMuNjg0MyAyNy4wMDMyWiIgZmlsbD0iIzEw
-        NDQ3MyIgY2xpcC1ydWxlPSJldmVub2RkIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiIC8+DQo8L3N2Zz4L
-</value>
-  </data>
   <data name="btnRole.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjEsIFZlcnNpb249MjAuMS4z
@@ -324,6 +283,85 @@
         MDJfNTc5Ij4NCiAgICAgIDxyZWN0IHg9IjAiIHk9IjAiIHdpZHRoPSI0OCIgaGVpZ2h0PSI0OCIgcng9
         IjAiIHJ5PSIwIiBmaWxsPSJ3aGl0ZSIgLz4NCiAgICA8L2NsaXBQYXRoPg0KICA8L2RlZnM+DQo8L3N2
         Zz4L
+</value>
+  </data>
+  <data name="barButtonItem3.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjEsIFZlcnNpb249MjAuMS4z
+        LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
+        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAK4CAAAC77u/
+        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
+        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
+        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
+        Y2U9InByZXNlcnZlIiBpZD0iTGF5ZXJfMSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAg
+        MzIgMzIiPg0KICA8c3R5bGUgdHlwZT0idGV4dC9jc3MiPgoJLlllbGxvd3tmaWxsOiNGRkIxMTU7fQoJ
+        LlJlZHtmaWxsOiNEMTFDMUM7fQoJLkJsdWV7ZmlsbDojMTE3N0Q3O30KCS5HcmVlbntmaWxsOiMwMzlD
+        MjM7fQoJLkJsYWNre2ZpbGw6IzcyNzI3Mjt9CgkuV2hpdGV7ZmlsbDojRkZGRkZGO30KCS5zdDB7b3Bh
+        Y2l0eTowLjU7fQoJLnN0MXtkaXNwbGF5Om5vbmU7fQoJLnN0MntkaXNwbGF5OmlubGluZTtmaWxsOiMw
+        MzlDMjM7fQoJLnN0M3tkaXNwbGF5OmlubGluZTtmaWxsOiNEMTFDMUM7fQoJLnN0NHtkaXNwbGF5Omlu
+        bGluZTtmaWxsOiM3MjcyNzI7fQo8L3N0eWxlPg0KICA8ZyBpZD0iTWFya0NvbXBsZXRlIj4NCiAgICA8
+        cG9seWdvbiBwb2ludHM9IjI3LDQgMTEsMjAgNSwxNCAyLDE3IDExLDI2IDMwLDcgICIgY2xhc3M9Ikdy
+        ZWVuIiAvPg0KICA8L2c+DQo8L3N2Zz4L
+</value>
+  </data>
+  <data name="barButtonItem4.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjEsIFZlcnNpb249MjAuMS4z
+        LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
+        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAMADAAAC77u/
+        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
+        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
+        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
+        Y2U9InByZXNlcnZlIiBpZD0iTGF5ZXJfMSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAg
+        MzIgMzIiPg0KICA8c3R5bGUgdHlwZT0idGV4dC9jc3MiPgoJLkJsdWV7ZmlsbDojMTE3N0Q3O30KCS5Z
+        ZWxsb3d7ZmlsbDojRkZCMTE1O30KCS5CbGFja3tmaWxsOiM3MjcyNzI7fQoJLkdyZWVue2ZpbGw6IzAz
+        OUMyMzt9CgkuUmVke2ZpbGw6I0QxMUMxQzt9Cgkuc3Qwe29wYWNpdHk6MC43NTt9Cgkuc3Qxe29wYWNp
+        dHk6MC41O30KPC9zdHlsZT4NCiAgPGcgaWQ9IlNldHRpbmdzIj4NCiAgICA8cGF0aCBkPSJNMzAsMTh2
+        LTRsLTQuNC0wLjdjLTAuMi0wLjgtMC41LTEuNS0wLjktMi4xbDIuNi0zLjZsLTIuOC0yLjhsLTMuNiwy
+        LjZjLTAuNy0wLjQtMS40LTAuNy0yLjEtMC45TDE4LDJoLTQgICBsLTAuNyw0LjRjLTAuOCwwLjItMS41
+        LDAuNS0yLjEsMC45TDcuNSw0LjdMNC43LDcuNWwyLjYsMy42Yy0wLjQsMC43LTAuNywxLjQtMC45LDIu
+        MUwyLDE0djRsNC40LDAuN2MwLjIsMC44LDAuNSwxLjUsMC45LDIuMSAgIGwtMi42LDMuNmwyLjgsMi44
+        bDMuNi0yLjZjMC43LDAuNCwxLjQsMC43LDIuMSwwLjlMMTQsMzBoNGwwLjctNC40YzAuOC0wLjIsMS41
+        LTAuNSwyLjEtMC45bDMuNiwyLjZsMi44LTIuOGwtMi42LTMuNiAgIGMwLjQtMC43LDAuNy0xLjQsMC45
+        LTIuMUwzMCwxOHogTTE2LDIwYy0yLjIsMC00LTEuOC00LTRjMC0yLjIsMS44LTQsNC00czQsMS44LDQs
+        NEMyMCwxOC4yLDE4LjIsMjAsMTYsMjB6IiBjbGFzcz0iQmx1ZSIgLz4NCiAgPC9nPg0KPC9zdmc+Cw==
+</value>
+  </data>
+  <data name="barButtonItem5.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjEsIFZlcnNpb249MjAuMS4z
+        LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
+        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAPcGAAAC77u/
+        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
+        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
+        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
+        Y2U9InByZXNlcnZlIiBpZD0iQWNjb3VudGluZ19OdW1iZXJfRm9ybWF0IiBzdHlsZT0iZW5hYmxlLWJh
+        Y2tncm91bmQ6bmV3IDAgMCAzMiAzMiI+DQogIDxzdHlsZSB0eXBlPSJ0ZXh0L2NzcyI+CgkuR3JlZW57
+        ZmlsbDojMDM5QzIzO30KCS5ZZWxsb3d7ZmlsbDojRkZCMTE1O30KPC9zdHlsZT4NCiAgPHBhdGggZD0i
+        TTExLDJjLTUsMC05LDQtOSw5czQsOSw5LDlzOS00LDktOVMxNiwyLDExLDJ6IE0xNSw4LjVjLTAuNy0w
+        LjQtMS41LTAuNi0yLjMtMC42Yy0xLDAtMS43LDAuMy0yLjMsMC45ICBDMTAsOS4xLDkuNyw5LjUsOS42
+        LDEwSDEzdjJIOS42YzAuMSwwLjUsMC40LDAuOSwwLjcsMS4zYzAuNiwwLjYsMS4zLDAuOCwyLjMsMC44
+        YzAuOSwwLDEuNy0wLjIsMi41LTAuNnYyICBjLTAuNywwLjMtMS43LDAuNS0yLjksMC41Yy0xLjYsMC0y
+        LjgtMC40LTMuNy0xLjNDNy42LDE0LDcuMiwxMy4xLDcuMSwxMkg2di0yaDEuMWMwLjItMSwwLjctMS45
+        LDEuNC0yLjZjMS0xLDIuMy0xLjQsMy45LTEuNCAgYzEsMCwxLjgsMC4xLDIuNSwwLjRWOC41eiIgY2xh
+        c3M9IlllbGxvdyIgLz4NCiAgPHBhdGggZD0iTTIxLDEyYy01LDAtOSw0LTksOXM0LDksOSw5czktNCw5
+        LTlTMjYsMTIsMjEsMTJ6IE0yNC4zLDI0LjVjLTAuMiwwLjQtMC41LDAuNy0wLjgsMC45ICBjLTAuNCww
+        LjItMC44LDAuNC0xLjIsMC41Yy0wLjEsMC0wLjIsMC0wLjMsMFYyN2gtMnYtMWMtMC4yLDAtMC41LTAu
+        MS0wLjctMC4xYy0wLjUtMC4xLTAuOS0wLjItMS4zLTAuNHYtMi4yICBjMC40LDAuMywwLjksMC42LDEu
+        MywwLjdjMC41LDAuMiwwLjksMC4yLDEuNCwwLjJjMC4zLDAsMC41LDAsMC43LTAuMWMwLjIsMCwwLjQt
+        MC4xLDAuNS0wLjJjMC4xLTAuMSwwLjItMC4yLDAuMy0wLjMgIGMwLjEtMC4xLDAuMS0wLjIsMC4xLTAu
+        NGMwLTAuMi0wLjEtMC40LTAuMi0wLjVjLTAuMS0wLjEtMC4zLTAuMy0wLjQtMC40Yy0wLjItMC4xLTAu
+        NC0wLjItMC43LTAuNGMtMC4zLTAuMS0wLjUtMC4yLTAuOC0wLjQgIGMtMC44LTAuMy0xLjMtMC43LTEu
+        Ny0xLjJzLTAuNi0xLTAuNi0xLjZjMC0wLjUsMC4xLTAuOSwwLjMtMS4zYzAuMi0wLjQsMC41LTAuNyww
+        LjgtMC45YzAuMy0wLjIsMC42LTAuMywwLjktMC40VjE1aDJ2MSAgYzAuNCwwLDAuOCwwLDEuMSwwLjFj
+        MC40LDAuMSwwLjUsMC4xLDAuOSwwLjJ2MmMtMC4yLTAuMS0wLjEtMC4xLTAuMy0wLjJjLTAuMi0wLjEt
+        MC40LTAuMi0wLjYtMC4yYy0wLjItMC4xLTAuNC0wLjEtMC42LTAuMSAgYy0wLjIsMC0wLjQsMC0wLjYs
+        MGMtMC4yLDAtMC41LDAtMC43LDAuMWMtMC4yLDAtMC40LDAuMS0wLjUsMC4yYy0wLjEsMC4xLTAuMiww
+        LjItMC4zLDAuM2MtMC4xLDAuMS0wLjEsMC4zLTAuMSwwLjQgIGMwLDAuMiwwLDAuMywwLjEsMC40YzAu
+        MSwwLjEsMC4yLDAuMiwwLjQsMC40YzAuMiwwLjEsMC4zLDAuMiwwLjYsMC4zYzAuMiwwLjEsMC41LDAu
+        MiwwLjgsMC4zYzAuNCwwLjIsMC43LDAuMywxLDAuNSAgYzAuMywwLjIsMC42LDAuNCwwLjgsMC42YzAu
+        MiwwLjIsMC40LDAuNSwwLjUsMC44YzAuMSwwLjMsMC4yLDAuNiwwLjIsMUMyNC42LDIzLjcsMjQuNSwy
+        NC4xLDI0LjMsMjQuNXoiIGNsYXNzPSJHcmVlbiIgLz4NCjwvc3ZnPgs=
 </value>
   </data>
   <metadata name="documentManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
